[tool.poetry]
name = "web-hw11"
version = "0.1.0"
description = ""
authors = ["Oleksandr Volynets <108275803+OleksandrVolynets@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "web_hw11"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.2"
uvicorn = {extras = ["standart"], version = "^0.23.2"}
sqlalchemy = "^2.0.22"
psycopg2 = "^2.9.9"
alembic = "^1.12.0"
libgravatar = "^1.0.4"
python-multipart = "^0.0.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
